<resources>
    <string name="app_name">BakingApp</string>
    <string name="add_widget">Add widget</string>
    <string name="error_loading">Something went wrong. Please try later!</string>
    <string name="ingredients">Ingredients</string>
</resources>
